--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
 
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta1'
 
     //coroutine lifecycle
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
@@ -73,5 +74,8 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+
+    //splash
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 
 }
